--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
+    "immer": "^9.0.15",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-hook-form": "^7.34.0",
+    "react-router-dom": "^6.3.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.1",
