--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.1",
     "prettier": "^2.7.1",
+    "standard-version": "^9.5.0",
     "vite": "^3.0.6"
   }
 }
