--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@supabase/supabase-js": "^1.35.6",
+    "@tanstack/react-query": "^4.2.1",
+    "@tanstack/react-query-devtools": "^4.2.1",
     "immer": "^9.0.15",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
