--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "fancy-bank",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "standard-version"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
