--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^1.35.6",
     "@tanstack/react-query": "^4.2.1",
     "@tanstack/react-query-devtools": "^4.2.1",
+    "@udecode/zustood": "^1.1.1",
     "immer": "^9.0.15",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
@@ -27,8 +28,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.1",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
-    "vite": "^3.0.6"
+    "vite": "^3.0.6",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
